syntax = "proto3";

message RoomUserLeftData {
    string user_id = 1;
}
